Fix ML integration, DB-backed 2026 season accuracy, and UI polish